# study

./: .gitignore
src/location_publisher/: package.xml  setup.cfg  setup.py
src/location_publisher/location_publisher/: location_target_publisher.py
src/study_bringup/: package.xml  setup.cfg  setup.py
src/study_bringup/launch/: bringup.launch.py
src/sy2_pkg/: CMakeLists.txt  package.xml
src/sy2_pkg/src/: sy2_node.cpp
src/sy3_pkg/: CMakeLists.txt  package.xml
src/sy3_pkg/src/: sy3_node.cpp
src/sy4_pkg/: CMakeLists.txt  package.xml
src/sy4_pkg/src/: sy4_node.cpp
src/sy5_pkg/: CMakeLists.txt  package.xml
src/sy5_pkg/msg/: Serial.msg
src/sy5_pkg/src/: sy5_node.cpp
src/sy6_pkg/: CMakeLists.txt  package.xml
src/sy6_pkg/src/: sy6_node.cpp
src/sy7_pkg/: CMakeLists.txt  package.xml
src/sy7_pkg/src/: sy7_node.cpp
src/sy_pkg/: CMakeLists.txt  package.xml
src/sy_pkg/src/: sy_node.cpp
src/test_msg/: CMakeLists.txt  package.xml
src/test_msg/msg/: Test.msg
src/test_msg/src/: test_node.cpp
src/tip_position_bridge/: package.xml  setup.cfg  setup.py
src/tip_position_bridge/config/: tip_position_client.yaml
src/tip_position_bridge/launch/: tip_position_client.launch.py
src/tip_position_bridge/tip_position_bridge/: tip_position_client.py
