<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>study_bringup</name>
  <version>0.0.0</version>
  <description>One-shot launch files for the 5-axis robotic arm stack (sy4 + sy5 + sy6 + sy7 + tip_position_bridge).</description>
  <maintainer email="a2830189086@qq.com">mywstc3</maintainer>
  <license>Apache-2.0</license>

  <exec_depend>sy4_pkg</exec_depend>
  <exec_depend>sy5_pkg</exec_depend>
  <exec_depend>sy6_pkg</exec_depend>
  <exec_depend>sy7_pkg</exec_depend>
  <exec_depend>tip_position_bridge</exec_depend>
  <exec_depend>ros2launch</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
